@@ -12,7 +12,6 @@
 //with this library; if not, write to the Free Software Foundation, Inc., 59
 //Temple Place, Suite 330, Boston, MA 02111-1307 USA
 using System.Net;
-using Bdev.Net.Dns;
 
 namespace xmpp.net
 {
