@@ -52,7 +52,6 @@
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Security, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Assembly" localcopy="True" refto="../lib/stringprep.dll" />
     <ProjectReference type="Assembly" localcopy="True" refto="../lib/log4net.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../lib/Bdev.Net.Dns.dll" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo RelativeMakefileName="./Makefile.am" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../">
     <BuildFilesVar Sync="True" Name="FILES" />
