@@ -1,4 +1,8 @@
 2007-11-01  Dieter Lunn <coder2000@gmail.com> 
+* Working on getting SSL working with the new state model.
+	
+
+2007-11-01  Dieter Lunn <coder2000@gmail.com> 
 
 	
 
